--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 
 <body>
     <div id="container"></div>
+
+    <div style="text-align: center; margin-top: 20px;">
+        <a href="https://thisonky.github.io/pesan" target="_blank">
+            <button style="padding: 10px 20px; font-size: 16px;">Baca Pesan</button>
+        </a>
+    </div>
 </body>
 
 </html>
